# UGV_ros

./: README.md
CameraCalibration/: Calibration1.py  calibration.pkl  calibration.py  cameraMatrix.pkl  dist.pkl  getImages.py  undistort.py
catkin_ws/: map_output.txt  view_ros_image.sh
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/gscam/: gscam  gscam_node
catkin_ws/devel/lib/pkgconfig/: dso_ros.pc  gscam.pc  jetson_nano_csi_cam.pc  my_usb_cam.pc  orb_slam3_ros_wrapper.pc  random_coordinates_publisher.pc  random_coordinates_receiver.pc
catkin_ws/devel/lib/random_coordinates_publisher/: random_coordinates_publisher_node
catkin_ws/src/imu_gps_localization-master/: CMakeLists.txt  gps.csv  state.csv
catkin_ws/src/my_usb_cam/: CMakeLists.txt  package.xml
catkin_ws/src/nmea_msgs-master/: CMakeLists.txt
catkin_ws/src/random_coordinates_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/random_coordinates_publisher/src/: random_coordinates_publisher.cpp
catkin_ws/src/trajectory_planner/: CMakeLists.txt
catkin_ws/src/trajectory_planner/src/: D_star_planner.cpp  backup_pointcloud_creator.cpp  pointcloud_creator.cpp  random_coordinates_receiver.cpp
catkin_ws/src/wit_ros_imu/: CMakeLists.txt  imu_usb.rules
launch_files/: launch_all.sh  launch_cam.sh  launch_gps.sh  launch_imu.sh  launch_orb.sh  launch_orb2.sh  launch_wifi.sh  main.cpp  orb_slam3_install.sh  start_ORB_SLAM3.sh  vnc_monitor.sh
motor_controls/: main.py  moveservo_pca9685.py  pca9685_sample.py  pwm_car.py  straight_line_servo.py
(+14 files in other folders)
